# ffxiv-crafting

./: Cargo.toml  LICENSE  README.md  pyproject.toml
src/: data.rs  export.rs  lib.rs
