[package]
name = "ffxiv-crafting"
version = "6.3.1"
edition = "2021"
authors = ["Tnze <cjd001113@outlook.com>"]
description = "A crafting simulator of FFXIV."
readme = "README.md"
repository = "https://github.com/Tnze/ffxiv-crafting"
license = "MIT"
keywords = ["ff14", "ffxiv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.162", optional = true, features = ["derive"] }

[features]
serde-support = ["serde"]