[package]
name = "ffxiv-crafting"
version = "7.4.1"
edition = "2021"
authors = ["Tnze <Tnze@tnze.tech>"]
description = "A crafting simulator of FFXIV."
readme = "README.md"
repository = "https://github.com/Tnze/ffxiv-crafting"
license = "MIT"
keywords = ["ff14", "ffxiv"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }

[features]
serde-support = ["serde"]
